adding new from-scratch site

--- a/header.html
+++ b/header.html
@@ -1,13 +1,18 @@
+ 
 <div class="navbar">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <div class="title-area">
-        <a href="index.html" class="header">Mir's Portfolio</a>
+        <a href="/" class="nav-item header">&nbsp; Mir's Portfolio</a>
         <!-- <a href="index.html" class="subheader">Welcome to my portfolio site!</a> -->
     </div>
-    <div class="nav-spacer"></div>
-    <a href="projects.html" class="nav-item" >Projects</a>
-    <a href="brainmusic.html" class="nav-item">Brain Music</a>
-    <a href="listen.html" class="nav-item">Listen</a>
-    <a href="contact.html" class="nav-item">Contact</a>
+    <!-- <div class="nav-spacer item"> </div> -->
+    <a href="/projects.html" class="nav-item item" >Projects</a>
+    <a href="/brainmusic.html" class="nav-item item">Brain Music</a>
+    <a href="/listen.html" class="nav-item item">Listen</a>
+    <a href="/contact.html" class="nav-item item">Contact</a>
+
 </div>
+<hr>
+<!-- <br> -->
 
 
