--- a/listen.html
+++ b/listen.html
@@ -10,7 +10,45 @@
     <div id="header-placeholder"></div>
 
     <div class="page-content">
+        I make music under a few different aliases and have recorded on a variety of projects. 
+        I am a multi-instrumentalist, mainly playing sax, bass, and keys, but I also play drums and guitar and can double on clarinet. 
+        I use Max and Pure Data to make live effects and performance systems. 
+        My main DAW is Ableton but I have also been known to use REAPER and Audacity. 
+        
+        <MN>I love doing live sound for concerts and events. 
+        I got my start in the live music scene at Under the Couch, a historic Atlanta venue organized by the Georgia Tech Musician's Network. 
+        I became the Equipment Manager of the Musician's Network in 2020, organized an equipment checkout system for bands and individuals in the area as well as running our yearly music festival "Couchella" which I helped make into a semesterly festival.
+        I helped start a new equipment-oriented position of "Sound Officer", trainees of the equipment manager and studio manager, back in 2021. 
+        Over the years, I also served as the Studio Manager of MN and the Treasurer. 
+        </MN>
 
+        I help do sound for the Live at Wrek show on WREK radio (91.1FM), which you can listen to every Tuesday at 10pm either on the radio or at <a href="https://www.wrek.org/">wrek.org</a>.
+
+
+        I've run house shows at two houses I have lived in, becoming the main sound person for both indoor and outdoor shows. 
+        I invented the concept of "Drag Rave", a DIY house show that is part drag show and part rave, unifying an underground queer DJ and drag community at Georgia Tech. 
+
+        <br>My favorite microphone is the SM58. 
+        Why 58 and not 57? you may be asking. 
+        I just happen to own two SM58s and no SM57s and you can use them in the same context you would be able to use a 57 just with added wind protection. 
+        No one likes to hear vocals with too much "pop".
+
+        <br>
+
+
+        <br>My DJ personas include "audio boss", "mixing menace", and "DJ Daddy".
+        <br>My solo saxophone and electronics project is called "lash" and I play tenor sax in the band <a href="https://open.spotify.com/artist/4DSCQGnqSzQQEcjodphDfp?si=CsBzZ4S0R36nX9XitFrW8g">"Two Factor Authentication"</a>. I play bari sax in the Georgia Tech Jazz Ensemble.
+
+
+
+
+
+
+        <br><br><br>Here's some music that I made!
+
+
+
+        
 
     </div>
   </body>
