--- a/page_template.html
+++ b/page_template.html
@@ -2,8 +2,8 @@
 <html>
    <head>
       <title> Mir's Portfolio </title>
-      <link rel="stylesheet" href="style.css">
-      <script src="header.js"></script>
+      <link rel="stylesheet" href="/style.css">
+      <script src="/header.js"></script>
     </head>
   <body>
 
