--- a/projects.html
+++ b/projects.html
@@ -10,29 +10,48 @@
     <div id="header-placeholder"></div>
 
     <div class="page-content">
-        <a>Max External Library for Realtime Biosignal Processing</a>
-        <br><a href="projects/auditory-mirror.html">The Auditory Mirror</a>
-        <br><a>The MetroGnome</a>
-        <br><a> Rule-Based MIDI Human-Robot Interaction System</a>
-        <br><a>Ondes Martenot Waveshaper Eurorack Module</a>
-        <br><a>The Hub Emulation</a>
-        <br><a>Text-based Guitar Amp Emulator VST</a>
-        <br><a>Communication via Sound with Bird-Like Autonomous Agents</a>
-        <br><a>Ants Game</a>
-        <br><a>Binauralize your Beats</a>
-        <br><a>Pure Data Pedalboard</a>
-        <br><a>EarSketch Landing Page</a>
-        <br><a>The Fortress</a>
-        <br><a>Short films</a>
-        <br><a>This website</a>
-        <br><a></a>
-        <br><a></a>
-        <br><a></a>
-        <br><a></a>
-        <br><a></a>
-        <br><a></a>
-        <br><a></a>
+        <div class="homepage-container">
+            <div class="homepage-projects">
 
+                <b>Mir's Portfolio - Projects</b><br>
+                <hr>
+                <a href="brainmusic.html">Max External Library for Realtime Biosignal Processing</a>
+                <br><a href="projects/auditory-mirror.html">The Auditory Mirror</a>
+                <br><a href="projects/metrognome.html">The MetroGnome</a>
+                <br><a href="projects/robot.html"> Rule-Based MIDI Human-Robot Interaction System</a>
+                <br><a href="projects/ondes-martenot.html">Ondes Martenot Waveshaper Eurorack Module</a>
+                <br><a href="projects/the-hub.html">The Hub Emulation</a>
+                <br><a href="projects/amp-sim.html">Text-based Guitar Amp Emulator VST</a>
+                <br><a href="projects/bird-box.html">Communication via Sound with Bird-Like Autonomous Agents</a>
+                <br><a href="projects/ants-game.html">Ants Game</a>
+                <br><a href="projects/binauralize.html">Binauralize your Beats</a>
+                <br><a href="projects/pd-pedalboard.html">Pure Data Pedalboard</a>
+                <br><a href="projects/earsketch.html">EarSketch Landing Page</a>
+                <br><a href="projects/the-fortress.html">The Fortress</a>
+                <br><a href="projects/short-films.html">Short films</a>
+                <br><a href="https://github.com/combover01/portfolio2/tree/redesign" target="_blank">This website</a>
+                <br><a></a>
+                <br><a></a>
+                <br><a></a>
+                <br><a></a>
+                <br><a></a>
+                <br><a></a>
+                <br><a></a>
+            </div>
+
+            <div class="homepage-description">
+                Hi, I'm Mir Jeffres! Welcome to my website. I am a saxophonist, experimental electronic musician, and a master’s student in the Center for Music Technology at Georgia Tech. 
+                In May 2023, I graduated from Georgia Tech with an undergraduate degree majoring in Music Technology, concentrating in Electrical Engineering, and minoring in Physics.
+                I am a leader in the Atlanta music community. I teach live sound in various student groups and am involved in several local bands including Two Factor Authentication and Lash. 
+                This is my fifth and final year in the GT Music Technology program after being involved with research in interactive performance systems as part of the Brain Music Lab, Robotic Musicianship Lab, and now the IMPACT Lab with Dr. Alexandria Smith. 
+                My current research focus is on new interfaces for live music performance, specifically making it easier to use biosignals like EEG to support acoustic/electronic performance. 
+                I am developing a Max external library for biosignal processing to improve accessibility of brain music for computer musicians of all skill levels. 
+                This library is used in my own brain music performance practice centered around biofeedback and meditation to augment solo saxophone improvisation. 
+        
+                <br>See the nav bar above to look at my projects or brain music hardware/software documentation, and <a href="https://mirjeffres.substack.com/">click here</a> to subscribe to my email list and get updates on my Max externals and open-source EEG hardware!
+        
+            </div>
+        </div>
 
     </div>
   </body>
