--- a/projects/auditory-mirror.html
+++ b/projects/auditory-mirror.html
@@ -26,13 +26,13 @@
         <br><br>The “Featured” Youtube video: <a href="https://youtu.be/c2pnoDKYjrE">https://youtu.be/c2pnoDKYjrE</a>
         
         <br><br>
-        <img src="/_uploads/image.png" style="width:20%">
-        <img src="/_uploads/7image.png" style="width:20%">
-        <img src="/_uploads/6image.png" style="width:20%">
-        <img src="/_uploads/5image.png" style="width:20%">
-        <img src="/_uploads/4image.png" style="width:20%">
-        <img src="/_uploads/3image.png" style="width:20%">
-        <img src="/_uploads/2image.png" style="width:20%">
+        <img src="../_uploads/image.png" style="width:20%">
+        <img src="../_uploads/7image.png" style="width:20%">
+        <img src="../_uploads/6image.png" style="width:20%">
+        <img src="../_uploads/5image.png" style="width:20%">
+        <img src="../_uploads/4image.png" style="width:20%">
+        <img src="../_uploads/3image.png" style="width:20%">
+        <img src="../_uploads/2image.png" style="width:20%">
         <!-- <img src="/_uploads/image.png" style="width:20%"> -->
 
 
